[gd_scene load_steps=10 format=3 uid="uid://bfoa34xpu0ovi"]

[ext_resource type="PackedScene" uid="uid://bi6ss5gpufc8o" path="res://Scenes/game_over_menu.tscn" id="1_8xq5q"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_laekd"]
[ext_resource type="PackedScene" uid="uid://lx6fliytv8if" path="res://Scenes/bird.tscn" id="1_q1er4"]
[ext_resource type="Texture2D" uid="uid://bwf5i0qyei8n0" path="res://Assets/background-day.png" id="2_0su1n"]
[ext_resource type="PackedScene" uid="uid://bpsffkrmkvxsa" path="res://Scenes/ground.tscn" id="3_yku0a"]
[ext_resource type="PackedScene" uid="uid://crpvnfy7q7ewk" path="res://Scenes/pipes.tscn" id="4_1ii3r"]
[ext_resource type="PackedScene" uid="uid://bqk2r2ymllgpp" path="res://Scenes/flash.tscn" id="5_j6srs"]
[ext_resource type="PackedScene" uid="uid://de7kot3p5vokh" path="res://Scenes/score_manager.tscn" id="6_mvja6"]
[ext_resource type="PackedScene" uid="uid://db2ahngkyt6yv" path="res://Scenes/game_over.tscn" id="7_teyr2"]

[node name="Main" type="Node"]
script = ExtResource("1_laekd")

[node name="GameOverMenu" parent="." instance=ExtResource("1_8xq5q")]
z_index = 4096
scale = Vector2(0.4, 0.4)

[node name="Bird" parent="." instance=ExtResource("1_q1er4")]
unique_name_in_owner = true
z_index = 3

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
z_index = -4096
position = Vector2(-1, -3)
scale = Vector2(3, 3)
texture = ExtResource("2_0su1n")

[node name="Ground" parent="." instance=ExtResource("3_yku0a")]
z_index = 5
position = Vector2(72, 597)
scale = Vector2(3, 3)

[node name="Pipes" parent="." instance=ExtResource("4_1ii3r")]
z_index = -1
position = Vector2(940, 762)

[node name="Flash" parent="." instance=ExtResource("5_j6srs")]
visible = false
z_index = 4096

[node name="ScoreManager" parent="." instance=ExtResource("6_mvja6")]
z_index = 11
position = Vector2(2.00001, -655)

[node name="GameOver" parent="." instance=ExtResource("7_teyr2")]
visible = false
z_index = 4096

[node name="Save" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="highscore_changed" from="." to="GameOverMenu" method="_on_main_highscore_changed"]
[connection signal="highscore_changed" from="." to="ScoreManager" method="_on_main_highscore_changed"]
[connection signal="save_highscore" from="GameOverMenu" to="." method="_on_game_over_menu_save_highscore"]
[connection signal="start" from="Bird" to="Pipes" method="_on_bird_start"]
[connection signal="start" from="Bird" to="ScoreManager" method="_on_bird_start"]
[connection signal="stop_bird" from="Ground" to="Bird" method="_on_ground_stop_bird"]
[connection signal="stop_bird" from="Ground" to="Pipes" method="_on_ground_stop_bird"]
[connection signal="Bird_Touched" from="Pipes" to="GameOverMenu" method="_on_pipes_bird_touched"]
[connection signal="Bird_Touched" from="Pipes" to="Bird" method="_on_pipes_bird_touched"]
[connection signal="Bird_Touched" from="Pipes" to="Camera2D" method="_on_pipes_bird_touched"]
[connection signal="Bird_Touched" from="Pipes" to="Ground" method="_on_pipes_bird_touched"]
[connection signal="Bird_Touched" from="Pipes" to="Flash" method="_on_pipes_bird_touched"]
[connection signal="Bird_Touched" from="Pipes" to="GameOver" method="_on_pipes_bird_touched"]
[connection signal="scored" from="Pipes" to="ScoreManager" method="_on_pipes_scored"]
[connection signal="bird_scored" from="ScoreManager" to="GameOverMenu" method="_on_score_manager_bird_scored"]
[connection signal="change_highscore" from="ScoreManager" to="GameOverMenu" method="_on_score_manager_change_highscore"]
[connection signal="timeout" from="Save" to="." method="_on_save_timeout"]
